--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "clsx": "^2.1.1",
     "d3-dsv": "^2.0.0",
     "dns": "^0.2.2",
-    "dotenv": "^16.4.7",
+    "docx-preview": "^0.3.4",
     "fs": "^0.0.1-security",
     "js-cookie": "^3.0.5",
     "langchain": "^0.3.12",
@@ -56,6 +56,7 @@
     "react-dropzone": "^14.3.5",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.4.0",
+    "react-papaparse": "^4.4.0",
     "resend": "^4.1.2",
     "stripe": "^17.6.0",
     "tailwind-merge": "^2.6.0",
