--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/layout.js", "next.config.mjs", "src/app/api/chat/route.js", "src/app/api/chat2/route.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/layout.js", "next.config.mjs", "src/app/api/chat/route.js", "src/app/api/chat2/route.js", "src/app/features/pdf/viewer/csv.js"],
   "exclude": ["node_modules"]
 }
