--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "d3-dsv": "^2.0.0",
     "dns": "^0.2.2",
     "docx-preview": "^0.3.4",
+    "framer-motion": "^12.4.10",
     "fs": "^0.0.1-security",
     "js-cookie": "^3.0.5",
     "langchain": "^0.3.12",
